[package]
name = "mp3-duration-sum"
description = "Parallelized counting of duration of all `.mp3` files in the given directory"
repository = "https://github.com/Gregoor/mp3-duration-sum"
version = "0.1.1"
authors = ["Gregor Weber <gregorwbr@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
mp3-duration = "0.1"
rayon = "1.0"
structopt = "0.2"
